# nvw

./: NOTICE  README.md  build.sh  pyproject.toml
etc/: capture.sh
node/: .gitignore  package-lock.json  package.json  testdata.json
node/config/: webpack.common.js  webpack.dev.js
node/src/: globals.js  index.js
node/src/components/: app.vue
node/src/components/blocks/: NviewAppbar.vue  NviewCommandInputDialog.vue  NviewCommandResultDialog.vue  NviewConfigPutDialog.vue  NviewConfigPutResultDialog.vue  NviewConfigViewDialog.vue  NviewHtmlSnippet.vue  NviewNav.vue  NviewRegisterJsonDialog.vue  NviewReportCreationDialog.vue  NviewReportEditDialog.vue  NviewReportMenu.vue  VisNw.vue
node/src/components/blocks/shared/: NviewDialog.vue  NviewDropdownMenu.vue  NviewDropdownSubmenu.vue
node/src/components/parts/: NviewAppbarButton.vue  NviewHighlightedTextarea.vue  NviewSimpleButton.vue
node/src/plugins/: markdown.js  websocket.js
node/src/repositories/async/: asyncRepositoryBase.js  asyncRepositryFactory.js  createRepository.js  envListRepository.js  packetCaptureRepository.js  topologyRepository.js
node/src/repositories/axios/: axiosRepositoryBase.js  axiosRepositoryFactory.js  commandExecRepository.js  configRepository.js  configTemplateRepository.js  paramRepository.js  reportEntryRepository.js  reportRepository.js
nvw/: __init__.py
nvw/app1/: views.py
