[tool.poetry]
name = "nvw"
version = "1.1.1"
description = "Network test frontend"
license = "Apache-2.0"
authors = ["Atsushi Nemoto"]
include = ["nvw/app1/static/js/bundle.js", "nvw/app1/static/js/bundle.js.map"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1"
channels = "^3.0.5"
djangorestframework = "^3.13.1"
grpcio = "^1.48.1"
Jinja2 = "^3.1.2"
Markdown = "^3.4.1"
protobuf = "^4.24.3"

[tool.poetry.dev-dependencies]
ipython = "^8.4.0"
autopep8 = "^1.7.0"
setuptools = "^65.0.0"
grpcio-tools = "^1.48.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
nvw-launch = 'nvw:run'
nvw-confgen = 'nvw:confgen'
